Cap 7/d-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: sample-webapp
  labels:
    app: sample-webapp
spec:
  ports:
  - name: 8080-tcp
    protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
  selector:
    app: sample-webapp
    deployment: sample-webapp
