Cap 7/service-postgresql.yaml
kind: Service
apiVersion: v1
metadata:
  name: postgresql
spec:
  ports:
  - name: postgresql
    protocol: TCP
    port: 5432
    targetPort: 5432
  type: ClusterIP
